@@ -70,6 +70,17 @@ type EventStorageConsumer interface {
 	Count() int64
 }
 
+// TrafficTypeStorageProducer interface should be implemented by all structs that ofer reading traffic types
+type TrafficTypeStorageProducer interface {
+	Increase(trafficType string)
+	Decrease(trafficType string)
+}
+
+// TrafficTypeStorageConsumer interface should be implemented by all structs that ofer reading traffic types
+type TrafficTypeStorageConsumer interface {
+	Get(trafficType string) int64
+}
+
 // --- Wide Interfaces
 
 // SplitStorage wraps consumer & producer interfaces
@@ -100,4 +111,10 @@ type MetricsStorage interface {
 type EventsStorage interface {
 	EventStorageConsumer
 	EventStorageProducer
+}
+
+// TrafficTypeStorage wraps consumer and producer interfaces
+type TrafficTypeStorage interface {
+	TrafficTypeStorageProducer
+	TrafficTypeStorageConsumer
 }
