@@ -8,7 +8,7 @@ import (
 	"github.com/splitio/go-toolkit/logging"
 )
 
-func updateSplits(splitStorage storage.SplitStorageProducer, splitFetcher service.SplitFetcher) (bool, error) {
+func updateSplits(splitStorage storage.SplitStorageProducer, splitFetcher service.SplitFetcher, trafficTypeStorage storage.TrafficTypeStorageProducer) (bool, error) {
 	till := splitStorage.Till()
 	if till == 0 {
 		till = -1
@@ -21,11 +21,17 @@ func updateSplits(splitStorage storage.SplitStorageProducer, splitFetcher servic
 
 	inactiveSplits := make([]dtos.SplitDTO, 0)
 	activeSplits := make([]dtos.SplitDTO, 0)
+	trafficTypesToAdd := make([]string, 0)
+	trafficTypesToRemove := make([]string, 0)
 	for _, split := range splits.Splits {
 		if split.Status == "ACTIVE" {
 			activeSplits = append(activeSplits, split)
+			trafficTypesToAdd = append(trafficTypesToAdd, split.TrafficTypeName)
 		} else {
 			inactiveSplits = append(inactiveSplits, split)
+			if till != -1 {
+				trafficTypesToRemove = append(trafficTypesToRemove, split.TrafficTypeName)
+			}
 		}
 	}
 
@@ -35,6 +41,14 @@ func updateSplits(splitStorage storage.SplitStorageProducer, splitFetcher servic
 	// Remove inactive splits
 	for _, split := range inactiveSplits {
 		splitStorage.Remove(split.Name)
+	}
+
+	for _, trafficType := range trafficTypesToAdd {
+		trafficTypeStorage.Increase(trafficType)
+	}
+
+	for _, trafficType := range trafficTypesToRemove {
+		trafficTypeStorage.Decrease(trafficType)
 	}
 
 	if splits.Since == splits.Till {
@@ -50,12 +64,13 @@ func NewFetchSplitsTask(
 	period int,
 	logger logging.LoggerInterface,
 	readyChannel chan string,
+	trafficTypeStorage storage.TrafficTypeStorageProducer,
 ) *asynctask.AsyncTask {
 	init := func(logger logging.LoggerInterface) error {
 		ready := false
 		var err error
 		for !ready {
-			ready, err = updateSplits(splitStorage, splitFetcher)
+			ready, err = updateSplits(splitStorage, splitFetcher, trafficTypeStorage)
 			if err != nil {
 				readyChannel <- "SPLITS_ERROR"
 				return err
@@ -66,7 +81,7 @@ func NewFetchSplitsTask(
 	}
 
 	update := func(logger logging.LoggerInterface) error {
-		_, err := updateSplits(splitStorage, splitFetcher)
+		_, err := updateSplits(splitStorage, splitFetcher, trafficTypeStorage)
 		return err
 	}
 
